make correction for horizontal overflow

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 html{
     font-size: 62.5%;
 }
+body {
+  overflow-x: hidden;
+}
 
 h1,
 h2,
