--- a/style1.css
+++ b/style1.css
@@ -28,6 +28,9 @@ label {
   color: #504e4d;
   line-height: 1.5;
 }
+body {
+  overflow-x: hidden;
+}
 
 
 
